[gd_scene load_steps=6 format=3 uid="uid://bon3baxk5ukgo"]

[ext_resource type="Script" uid="uid://c5imb18qn5s3l" path="res://scenes/UI/SlotsProgressUI.gd" id="1_hwhnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwhnl"]
bg_color = Color(0.17254902, 0.17254902, 0.17254902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pq01"]
bg_color = Color(0.11764706, 0.5176471, 0.28627452, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1uhpf"]
bg_color = Color(0.17254902, 0.17254902, 0.17254902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmttu"]
bg_color = Color(0.11764706, 0.5176471, 0.28627452, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SlotsProgressUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hwhnl")

[node name="SlotTitle" type="Label" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 23.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 29.0
offset_right = 220.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.014782078

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_right = 258.0
offset_bottom = 116.0
rotation = 0.012217305

[node name="InterventionName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "InterventionName
"

[node name="InterventionProgress" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_hwhnl")
theme_override_styles/fill = SubResource("StyleBoxFlat_6pq01")
show_percentage = false

[node name="TotalProgress" type="ProgressBar" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_1uhpf")
theme_override_styles/fill = SubResource("StyleBoxFlat_bmttu")
show_percentage = false

[node name="TimeLeftLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
